Review Section Done

--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style.css">
     <title>Canvas Website Design</title>
     <!-- -------------------------------- Copy From This website------------------- -->
     <!-- ------------------------------- https://canvastemplate.com/index.html ------------------- -->
 </head>
+
 <body>
     <header>
         <div class="header-notification">
-            <p>Versatile Framework providing all you need to Launch Multiple Websites with Ease, Style, & Optimal Functionality.</p>
+            <p>Versatile Framework providing all you need to Launch Multiple Websites with Ease, Style, & Optimal
+                Functionality.</p>
             <a href="#">Explore Demos</a>
         </div>
         <div class="header">
@@ -44,35 +49,157 @@
             </div>
 
         </div>
-         <!-- ----------------------Hero Section------------ -->
+        <!-- ----------------------Hero Section------------ -->
         <div class="container">
 
             <div class="Containerview">
                 <p>Create Powerful Websites Beautifully.</p>
-            <h1>CAR LISTING</h1>
-            <div class="heroabouttext">
-                <p> The Best Selling Multi-Purpose & Powerful Bootstrap 5.x based <br> Template with<span> 1400+ </span>Demo Layouts & <span>2000+</span> UI Features.</p>
-            </div>
+                <h1>CAR LISTING</h1>
+                <div class="heroabouttext">
+                    <p> The Best Selling Multi-Purpose & Powerful Bootstrap 5.x based <br> Template with<span> 1400+
+                        </span>Demo Layouts & <span>2000+</span> UI Features.</p>
+                </div>
 
-            <div class="herobuttonbox">
-                <div class="herobutton">
-                    <a href="#" class="ViewDemo">View Demo</a>
-                    <a href="#" class="StartCreating">Start Creating</a>
+                <div class="herobuttonbox">
+                    <div class="herobutton">
+                        <a href="#" class="ViewDemo">View Demo</a>
+                        <a href="#" class="StartCreating">Start Creating</a>
+                        <i class="fa-solid fa-circle-play"></i>
+                    </div>
                 </div>
-            </div>
-            
-            <div class="Checkmarkbox">
-                <div class="Checkmark">
-                    <p>Ready to Use</p>
-                    <p>#1 Template of all Time</p>
-                    <p>2900+ 5-Star Reviews</p>
-                    <p> 9+ Years of Development</p>
-                    <p>Lifetime Free Updates</p>
+
+                <div class="Checkmarkbox">
+                    <div class="Checkmark">
+                        <p> <i class="fa-solid fa-check"></i> Ready to Use</p>
+                        <p> <i class="fa-solid fa-check"></i> #1 Template of all Time</p>
+                        <p> <i class="fa-solid fa-star"></i> 2900+ 5-Star Reviews</p>
+                        <p> <i class="fa-solid fa-check"></i> 9+ Years of Development</p>
+                        <p> <i class="fa-solid fa-check"></i> Lifetime Free Updates</p>
+                    </div>
                 </div>
-            </div>
-            
+
             </div>
         </div>
     </header>
+
+    <!-- ---------------------------------Review and project Section--------------------------------- -->
+    <div class="Second-Container">
+        <div class="reviewSection">
+
+            <!-- -------------------------Circle Box------------------------- -->
+
+            <div class="CircleBox">
+                <p><i class="fa-solid fa-circle-exclamation"></i> All the 1400+ Designs & Templates displayed here are
+                    included in the Purchased Package</p>
+            </div>
+
+            <!-- ------------------------------------Trusted by------------------------------------ -->
+
+            <div class="Trustedby">
+                <p>Powering <span>350,000<i class="fa-solid fa-plus"></i> </span> Websites & Trusted by <span>70,000<i
+                            class="fa-solid fa-plus"></i></span> Users with 5-Star Reviews.</p>
+            </div>
+
+            <!-- --------------------------Message-------------------------- -->
+
+            <div class="reviewcontainer">
+                <div class="reviewbox">
+                    <div class="reviewcolumn1">
+                        <div class="Reviewcolumn1box">
+                            <p>With over two decades of watching code and websites evolve - CANVAS is by far in the
+                                winning
+                                circle of brands making the Internet experience more pleasing.</p>
+                            <div class="Nameandstar">
+                                <h3>bestnewname</h3>
+                                <h4>Envato User</h4>
+                                <div class="staricon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="reviewcolumn1">
+                        <div class="Reviewcolumn1box">
+                            <p>This template has it all. Its remarkable versatile and has tons of hidden elements.
+                                Definitely the most bang for your buck!</p>
+                            <div class="Nameandstar">
+                                <h3>VideoPro</h3>
+                                <h4>Envato User</h4>
+                                <div class="staricon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ---------------------what we have on this project--------------- -->
+            <div class="whatwehave">
+                <div class="whatrow">
+                    <div class="row">
+                        <h3>70000<i class="fa-solid fa-plus"></i></h3>
+                        <p>Happy Users</p>
+                    </div>
+                    <div class="row">
+                        <h3>180<i class="fa-solid fa-plus"></i></h3>
+                        <p>Pro Demos</p>
+                    </div>
+                    <div class="row">
+                        <h3>1400<i class="fa-solid fa-plus"></i></h3>
+                        <p>Templates</p>
+                    </div>
+                    <div class="row">
+                        <h3>220<i class="fa-solid fa-plus"></i></h3>
+                        <p>Site Blocks</p>
+                    </div>
+                    <div class="row">
+                        <h3>2000<i class="fa-solid fa-plus"></i></h3>
+                        <p>UI Features</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ---------------------Icons--------------- -->
+            <div class="reviewsectioicon">
+                <div class="iconsection">
+                    <img src="Images/Icons/bootstrap-5.svg" alt="bootstrap">
+                    <img src="Images/Icons/node-js.svg" alt="node-js">
+                    <img src="Images/Icons/gulp-js.svg" alt="gulp">
+                    <img src="Images/Icons/sass.svg" alt="sass">
+                    <img src="Images/Icons/ajax.svg" alt="ajax">
+                    <img src="Images/Icons/css.svg" alt="css">
+                    <img src="Images/Icons/html-5.svg" alt="html">
+                    <img src="Images/Icons/js.svg" alt="js">
+                    <img src="Images/Icons/dark.svg" alt="dark">
+                    <img src="Images/Icons/rtl.svg" alt="rtl">
+
+                </div>
+            </div>
+
+            <!-- ---------------------Icons--------------- -->
+
+            <div class="Oldversion">
+                <div class="checkoldversion">
+                    <p>Check Older Versions: </p>
+                    <a href="#">Canvas 6.x</a>
+                    <a href="#">Canvas 5.x</a>
+                    <a href="#">Watch Promo Video</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
